[gd_scene load_steps=9 format=2]

[ext_resource path="res://Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Wusel-Fall"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 122.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_top = 232.0
margin_right = 92.0
margin_bottom = 246.0
text = "                       "

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 558.0
margin_bottom = 478.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 462.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 2 )

[node name="Play" type="Button" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 462.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 3 )
text = "   PLAY"
flat = true
align = 0

[node name="EXIT" type="Button" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 192.0
margin_right = 462.0
margin_bottom = 258.0
custom_fonts/font = SubResource( 3 )
text = "       EXIT"
flat = true
align = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 562.0
margin_right = 1024.0
margin_bottom = 478.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 462.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 4 )

[node name="Score" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 122.0
margin_right = 462.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 5 )
text = "SCORE:"

[node name="Show_score" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 186.0
margin_right = 462.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="HighScore" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 250.0
margin_right = 462.0
margin_bottom = 310.0
custom_fonts/font = SubResource( 6 )
text = "HIGHSCORE:"

[node name="HighScore2" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 314.0
margin_right = 462.0
margin_bottom = 374.0
custom_fonts/font = SubResource( 6 )
text = "0"

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/VBoxContainer/EXIT" to="." method="_on_EXIT_pressed"]
